<resources>
    <string name="app_name">ShopList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_shopping_list">Add Shopping List</string>
    <string name="shop_name">Shop Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="add">Add</string>
    <string name="add_list">Add List</string>
    <string name="compare">Compare</string>
    <string name="compare_shops_title">Select Shop Names to Compare</string>
    <string name="generic_price">€ %.2f</string>
    <string name="view_lists">View Lists</string>
    <string name="generic_shop_name_details">%s Details</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
</resources>